microservices-project/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-project
  labels:
    istio-injection: enabled
